# c_project_template

./: .clang-format  .gitignore  AUTHORS  CONTRIBUTE  ChangeLog  INSTALL  Makefile.am  README  TRANSLATORS  bootstrap  configure.ac
include/: definitions.h  functions.h  macros.h
po/: Makefile.am  Makevars
src/: .gitignore  Makefile.am  main.c
tests/: Makefile.am  test.c
